# ba2bo2food

./: README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
app/: db.py  dependencies.py  i18n.py  main.py  security.py  templating.py
app/i18n/: de.json  en.json
app/models/: __init__.py  household.py  meal_log.py  planning.py  recipe.py  shopping_list.py  user.py  weight_checkin.py
app/routers/: auth.py  households.py  plans.py  progress.py  recipes.py
app/services/: calorie_targets.py  planning.py  shopping_list.py
app/static/: custom.css
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/household/: detail.html
app/templates/plans/: _shopping_list_item.html  detail.html  form.html  list.html  shopping_list.html
app/templates/profile/: detail.html  edit.html  progress.html
app/templates/recipes/: _ingredient_row.html  detail.html  form.html  list.html
project_requirements/: API.md  ARCHITECTURE.md  DATA_MODEL.md  FRONTEND.md  PRD.md  TESTING.md
tests/: conftest.py
tests/integration/: test_auth.py  test_plans.py  test_progress.py  test_recipes.py
tests/unit/: test_calorie_targets.py  test_planning.py  test_shopping_list.py
utils/: datamodel.py
